[gd_scene load_steps=12 format=3 uid="uid://bmxatnrtkqwmu"]

[ext_resource type="Script" uid="uid://sn0urmcbi7k8" path="res://debate/script/ui/gui/card_gui.gd" id="1_bq4c2"]
[ext_resource type="Texture2D" uid="uid://bks3574mtwiio" path="res://asset/debate/_general/graphic/card/card_base.png" id="2_vkr7h"]
[ext_resource type="Shader" uid="uid://tnou2ig6rqyn" path="res://general/style/color_swap.gdshader" id="3_aw4th"]
[ext_resource type="Texture2D" uid="uid://dcddfgqbb0arx" path="res://asset/debate/_general/graphic/card/tokenless_card_bg.png" id="4_3y6m8"]
[ext_resource type="Texture2D" uid="uid://ds44wsjmd8hyj" path="res://asset/debate/_general/graphic/suit/faith_icon.png" id="5_yw3yo"]
[ext_resource type="FontFile" uid="uid://c6hemjlvek8hj" path="res://asset/_general/font/TenorSans-Regular.ttf" id="6_78tlw"]
[ext_resource type="FontFile" uid="uid://bb8u2oie5sqet" path="res://asset/_general/font/fahkwang/Fahkwang-Bold.ttf" id="7_vwcdj"]
[ext_resource type="Script" uid="uid://raivwgmnlm38" path="res://general/script/exposed_control_methods.gd" id="8_v3r2e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3y6m8"]
resource_local_to_scene = true
shader = ExtResource("3_aw4th")
shader_parameter/target_color = Color(0.0117647, 1, 0, 1)
shader_parameter/replace_color = Color(0.278431, 0.278431, 0.278431, 1)
shader_parameter/tolerance = 0.8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y5xdp"]
content_margin_left = 10.0
content_margin_top = 0.0
content_margin_right = 10.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ld4d5"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[node name="TokenlessCardGUI" type="Control" node_paths=PackedStringArray("card_bg", "title", "description", "cost", "icon")]
custom_minimum_size = Vector2(370, 320)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -160.0
offset_right = 185.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(185, 320)
focus_mode = 2
script = ExtResource("1_bq4c2")
card_bg = NodePath("CardBG")
title = NodePath("CardBG/Title")
description = NodePath("CardBG/Description")
cost = NodePath("CardBG/Cost")
icon = NodePath("CardBG/SuitIcon")
metadata/focus_property = "card"

[node name="Shadow" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.0745098)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = 10.0
offset_right = -9.99997
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vkr7h")

[node name="CardBG" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_3y6m8")
layout_mode = 0
offset_right = 370.0
offset_bottom = 320.0
texture = ExtResource("4_3y6m8")

[node name="SuitIcon" type="TextureRect" parent="CardBG"]
self_modulate = Color(0.964706, 0.964706, 0.964706, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_top = 42.0
offset_right = 16.0
offset_bottom = 73.0
grow_horizontal = 2
texture = ExtResource("5_yw3yo")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="CardBG"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.125
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_fonts/font = ExtResource("6_78tlw")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_y5xdp")
text = "Structured Argument"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardSetNumber" type="Label" parent="CardBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 304.0
offset_top = 294.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.137255, 0.0862745, 0.0588235, 1)
theme_override_fonts/font = ExtResource("6_78tlw")
theme_override_font_sizes/font_size = 16
text = "12/78"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cost" type="Label" parent="CardBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.117
anchor_top = 0.217
anchor_right = 0.9
anchor_bottom = 1.0
offset_left = 267.821
offset_top = 172.535
offset_right = 25.1111
offset_bottom = -32.0247
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_fonts/font = ExtResource("6_78tlw")
theme_override_font_sizes/font_size = 30
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="CardBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.281
anchor_right = 0.984
anchor_bottom = 0.981
offset_left = -0.18
offset_top = 0.0799942
offset_right = -0.0800101
offset_bottom = 0.0799789
theme_override_colors/default_color = Color(0.137255, 0.0862745, 0.0588235, 1)
theme_override_fonts/normal_font = ExtResource("6_78tlw")
theme_override_fonts/bold_font = ExtResource("7_vwcdj")
theme_override_font_sizes/normal_font_size = 22
theme_override_font_sizes/bold_font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_ld4d5")
bbcode_enabled = true
text = "Place 2 [b]Structured Conversation[/b] tops.

Cost -1 for ever [b]pentagram[/b] top in play"
scroll_active = false

[node name="ExposedControlMethods" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("8_v3r2e")
root = NodePath("..")

[connection signal="focus_entered" from="." to="ExposedControlMethods" method="set_global_rotation" binds= [0.0]]
[connection signal="focus_entered" from="." to="ExposedControlMethods" method="set_z_index" binds= [1]]
[connection signal="focus_entered" from="." to="ExposedControlMethods" method="set_position" binds= [Vector2(0, -100)]]
[connection signal="focus_exited" from="." to="ExposedControlMethods" method="set_rotation" binds= [0.0]]
[connection signal="focus_exited" from="." to="ExposedControlMethods" method="set_z_index" binds= [0]]
[connection signal="focus_exited" from="." to="ExposedControlMethods" method="set_position" binds= [Vector2(0, 0)]]
