[gd_scene load_steps=11 format=3 uid="uid://bd8ykdcrcff7f"]

[ext_resource type="Script" path="res://script/debate/ui/card_ui.gd" id="1_qq0ek"]
[ext_resource type="Texture2D" uid="uid://bks3574mtwiio" path="res://asset/graphic/debate/general/card/card_base.png" id="2_cseqi"]
[ext_resource type="Texture2D" uid="uid://c08xx2yg7vleh" path="res://asset/graphic/debate/general/card/peace_card_bg.png" id="3_swoww"]
[ext_resource type="FontFile" uid="uid://c6hemjlvek8hj" path="res://asset/font/TenorSans-Regular.ttf" id="4_08p8r"]
[ext_resource type="FontFile" uid="uid://bb8u2oie5sqet" path="res://asset/font/fahkwang/Fahkwang-Bold.ttf" id="7_sl8k2"]
[ext_resource type="FontFile" uid="uid://bc31tvjxo02f" path="res://asset/font/fahkwang/Fahkwang-Italic.ttf" id="8_oanxe"]
[ext_resource type="Script" path="res://script/exposed_control_methods.gd" id="12_vka25"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y5xdp"]
content_margin_left = 10.0
content_margin_top = 0.0
content_margin_right = 10.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ld4d5"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_srmbm"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0

[node name="DoubtCardUI" type="Control" node_paths=PackedStringArray("title", "description", "cost")]
custom_minimum_size = Vector2(370, 320)
layout_mode = 3
anchors_preset = 0
offset_right = 370.0
offset_bottom = 320.0
scale = Vector2(0.81, 0.81)
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
focus_mode = 2
script = ExtResource("1_qq0ek")
title = NodePath("CardBG/Title")
description = NodePath("CardBG/Description")
cost = NodePath("CardBG/Cost")
metadata/focus_property = "card"

[node name="Shadow" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.0745098)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = 10.0
offset_right = -9.99997
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cseqi")

[node name="CardBG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 370.0
offset_bottom = 320.0
texture = ExtResource("3_swoww")

[node name="Title" type="Label" parent="CardBG"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.125
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_fonts/font = ExtResource("4_08p8r")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_y5xdp")
text = "Structured Argument"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardSetNumber" type="Label" parent="CardBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 304.0
offset_top = 294.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.137255, 0.0862745, 0.0588235, 1)
theme_override_fonts/font = ExtResource("4_08p8r")
theme_override_font_sizes/font_size = 16
text = "12/78"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cost" type="Label" parent="CardBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.117
anchor_top = 0.217
anchor_right = 0.9
anchor_bottom = 1.0
offset_left = 267.821
offset_top = 172.535
offset_right = 25.1111
offset_bottom = -32.0247
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_fonts/font = ExtResource("4_08p8r")
theme_override_font_sizes/font_size = 30
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="CardBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.309
anchor_right = 1.0
anchor_bottom = 0.772
offset_left = -0.18
offset_top = -8.88
offset_bottom = -0.0400047
theme_override_colors/default_color = Color(0.137255, 0.0862745, 0.0588235, 1)
theme_override_fonts/normal_font = ExtResource("4_08p8r")
theme_override_fonts/bold_font = ExtResource("7_sl8k2")
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_ld4d5")
bbcode_enabled = true
text = "Place 2 [b]Structured Conversation[/b] tops.

Cost -1 for ever [b]pentagram[/b] top in play"
scroll_active = false

[node name="FlavorText" type="RichTextLabel" parent="CardBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.052
anchor_top = 0.775
anchor_right = 0.778
anchor_bottom = 0.944
offset_left = -2.24
offset_top = -1.14441e-05
offset_right = 0.139979
offset_bottom = -0.0800018
theme_override_colors/default_color = Color(0.137255, 0.0862745, 0.0588235, 1)
theme_override_fonts/bold_font = ExtResource("7_sl8k2")
theme_override_fonts/italics_font = ExtResource("8_oanxe")
theme_override_font_sizes/italics_font_size = 10
theme_override_styles/normal = SubResource("StyleBoxEmpty_srmbm")
bbcode_enabled = true
text = "[center][i]Sometimes, planning out your thoughts can really change the flow of conversation[/i][/center]"
scroll_active = false

[node name="ExposedControlMethods" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("12_vka25")
root = NodePath("..")

[connection signal="focus_entered" from="." to="ExposedControlMethods" method="set_scale" binds= [Vector2(1, 1)]]
[connection signal="focus_entered" from="." to="ExposedControlMethods" method="set_z_index" binds= [1]]
[connection signal="focus_exited" from="." to="ExposedControlMethods" method="set_scale" binds= [Vector2(0.81, 0.81)]]
[connection signal="focus_exited" from="." to="ExposedControlMethods" method="set_z_index" binds= [0]]
