[gd_scene load_steps=5 format=3 uid="uid://p7gbun4jgavh"]

[ext_resource type="Script" path="res://script/debate/ui/banner_ui.gd" id="1_ekdl5"]
[ext_resource type="Texture2D" uid="uid://c3y4fyen3ymom" path="res://asset/graphic/debate/general/suit/doubt_icon.png" id="1_sou4q"]
[ext_resource type="Resource" uid="uid://6kra0yi48vyn" path="res://system/suit/doubt.tres" id="2_4rlg4"]
[ext_resource type="Script" path="res://script/exposed_control_methods.gd" id="2_cckne"]

[node name="DoubtBanner" type="ColorRect"]
modulate = Color(0.489622, 0.489622, 0.489622, 1)
size_flags_horizontal = 3
focus_mode = 2
color = Color(1, 0.4, 0.388235, 1)
script = ExtResource("1_ekdl5")
suit = ExtResource("2_4rlg4")
metadata/focus_property = "suit"

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sou4q")
stretch_mode = 5

[node name="ExposedControlMethods" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("2_cckne")
root = NodePath("..")

[connection signal="focus_entered" from="." to="ExposedControlMethods" method="set_modulate" binds= [Color(1, 1, 1, 1)]]
[connection signal="focus_exited" from="." to="ExposedControlMethods" method="set_modulate" binds= [Color(0.490196, 0.490196, 0.490196, 1)]]
